# jetblack-graphql-federation

./: README.md  pyproject.toml
examples/: example1.py  example2.py
src/jetblack_graphql_federation/: federation_version.py  types.py
src/jetblack_graphql_federation/apollo_versions/: __init__.py  v1_0.py  v2_0.py  v2_1.py  v2_10.py  v2_11.py  v2_2.py  v2_3.py  v2_5.py  v2_6.py  v2_7.py  v2_8.py  v2_9.py
src/jetblack_graphql_federation/apollo_versions/v1_0/: directives.py  implementation.py  scalars.py
src/jetblack_graphql_federation/apollo_versions/v1_1/: federation.py
src/jetblack_graphql_federation/apollo_versions/v2_0/: __init__.py  (+3 more)
src/jetblack_graphql_federation/scalars/: __init__.py  context_field_value.py  field_set.py  link_import.py  link_purpose.py  policy.py  scope.py
src/jetblack_graphql_federation/v1_0/: federation.py
src/jetblack_graphql_federation/v1_1/: federation.py
src/jetblack_graphql_federation/v2_0/: federation.py
src/jetblack_graphql_federation/v2_1/: federation.py
src/jetblack_graphql_federation/v2_10/: federation.py
src/jetblack_graphql_federation/v2_11/: federation.py
src/jetblack_graphql_federation/v2_2/: federation.py
src/jetblack_graphql_federation/v2_3/: federation.py
src/jetblack_graphql_federation/v2_4/: federation.py
src/jetblack_graphql_federation/v2_5/: federation.py
src/jetblack_graphql_federation/v2_6/: federation.py
src/jetblack_graphql_federation/v2_7/: federation.py
src/jetblack_graphql_federation/v2_8/: federation.py
src/jetblack_graphql_federation/v2_9/: federation.py
tests/: test_v2_1.py
(+96 files in other folders)
