[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jetblack-graphql-federation"
version = "0.1.0"
description = "Let's go psycho!"
authors = [{name = "Rob Blackbourn", email = "rob.blackbourn@gmail.com"}]
readme = "README.md"
dependencies = [
    "graphql-core>=3,<4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy"
]

[project.urls]
Repository = "https://github.com/rob-blackbourn/jetblack_graphql_federation"

# pylint
[tool.pylint.main]
py-version = "3.12"
jobs = 4

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_"]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "missing-module-docstring",
    "missing-function-docstring",
    "invalid-name",
]

# pytest
[tool.pytest.ini_options]
testpaths = [
    "tests"
]

# mypy
[tool.mypy]
files = [ "src/jetblack_graphql_federation", "tests", "examples" ]

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true
